# Intro-To-Software-Projects

./: .gitattributes  Cargo.toml  README.md  justfile
godot/: .gitignore  FnafDoubleVisionTerminal.gdextension  FnafDoubleVisionTerminal.gdextension.uid  Rust.gdextension  Rust.gdextension.uid  Swift.gdextension  Swift.gdextension.uid  export_presets.cfg  icon.svg.import  project.godot
godot/addons/proto_controller/: proto_controller.gd.uid  proto_controller.tscn
godot/assets/: 2025-08-13 08-17-24.png.import  2025-08-13 09-15-33.png.import  2025-08-13_10-05-13.webp.import  Rat.glb  Rat.glb.import  Rat_Cube Roughness.png.import  Rat_Cube.png.import  Rat_Cylinder Normal.png.import  Rat_Material.png.import  Rat_Sphere Roughness.png.import  Rat_Sphere.png.import  Rat_Sphere_2.png.import  Rat_Sphere_3.png.import  Rat_Sphere_6.png.import  Rat_Sphere_7.png.import  font_tiles.png.import  oppossom.glb  oppossom.glb.import  oppossom_Sphere Roughness.png.import  oppossom_Sphere.png.import  oppossom_Sphere_2.png.import  oppossom_Sphere_3.png.import  oppossom_Sphere_4.png.import  oppossom_Sphere_5.png.import  racoon.glb  racoon.glb.import  racoon_Sphere Roughness.png.import  racoon_Sphere.png.import  racoon_Sphere_2.png.import  racoon_Sphere_3.png.import  racoon_Sphere_4.png.import  racoon_Sphere_5.png.import
godot/audio/Ambeant/: sewer_water.wav.import  user_beeps.mp3.import  user_beeps.wav.import  water_drips.mp3.import
godot/audio/Doors/Door/: close_door.mp3.import  open_door.wav.import
godot/audio/Doors/Vent/: vent_close.wav.import  vent_open.mp3.import
godot/audio/Enemy/Possum/: possum_footsteps.mp3.import  (+2 more)
godot/resources/: gate.res  gate.tres  vent.tres
godot/scenes/: EnemySFX.gd  EnemySFX.gd.uid  GateAnim.gd  GateAnim.gd.uid  VentAnim.gd  VentAnim.gd.uid  game.gltf  game.gltf.import  game.tscn  gate.gd  gate.gd.uid  gate.tscn  grate.gd  grate.gd.uid  grate.tscn  navmesh.tres  terminal.tscn  test.gd  test.gd.uid  test.tscn
godot/scenes/textures/: _albedo000.png.import
rust/: Cargo.toml
rust/src/: lib.rs  tracing_godot.rs
rust/src/terminal/: cursor_x.rs  mod.rs  position_marker.rs  tile_map.rs
rust/src/terminal/commands/: init.rs  main.rs  mod.rs  pause.rs
rust/src/tracing_godot/: log_server.html  mod.rs
src/: main.rs
swift/: Package.resolved  Package.swift
swift/Sources/fnaf/: FlickeringOmniLight.swift  Gate.swift  Logger.swift  LoggingNode.swift  ProtoController.swift  Vent.swift  fnaf.swift
swift/Sources/swift/: Logger.swift  LoggingNode.swift
(+10 files in other folders)
