[package]
name = "fnaf-5-double-vision"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ansi-to-html = { version = "0.2.2", features = ["lazy-init"] }
axum = { version = "0.8.4", default-features = false, features = ["tokio", "ws"] }
axum-server = "0.7.2"
color-eyre = "0.6.5"
futures-util = "0.3.31"
godot = { version = "0.3.4", features = ["api-4-4"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.22", default-features = false }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
