[package]
name = "fnaf-5-double-vision"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ansi-to-html = { version = "0.2.2", features = ["lazy-init"] }
ansi-to-tui = "7.0.0"
anstream = "0.6.20"
axum = { version = "0.8.4", default-features = false, features = ["tokio", "ws"] }
axum-server = "0.7.2"
clap = { version = "4.5.44", features = ["derive"] }
color-eyre = "0.6.5"
futures-util = "0.3.31"
godot = { version = "0.3.4", features = ["api-4-4"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.22", default-features = false }
shlex = "1.3.0"
tachyonfx = { version = "0.16.0", default-features = false, features = ["crossterm", "std-duration"] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-width = "0.2.0"
yoke = { version = "0.8.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
